tests/files/parser_tests/should_fail/090.cmdr
//Should not parse due to unterminated curly braces
add = (a, b)
    return a + b;
}
